This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: test_builtin fails after merging the fix for bpo-34756
Type: behavior Stage: resolved
Components: Tests Versions: Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: miss-islington, serhiy.storchaka, vstinner, yan12125
Priority: normal Keywords: patch, patch, patch, patch

Created on 2019-01-15 09:43 by yan12125, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 11561 merged serhiy.storchaka, 2019-01-15 10:23
PR 11561 merged serhiy.storchaka, 2019-01-15 10:23
PR 11561 merged serhiy.storchaka, 2019-01-15 10:23
PR 11561 merged serhiy.storchaka, 2019-01-15 10:23
PR 11564 merged miss-islington, 2019-01-15 11:26
PR 11564 merged miss-islington, 2019-01-15 11:27
PR 11564 merged miss-islington, 2019-01-15 11:27
PR 11564 merged miss-islington, 2019-01-15 11:27
Messages (10)
msg333655 - (view) Author: (yan12125) * Date: 2019-01-15 09:43
On git-master (32ebd8508d4807a7c85d2ed8e9c3b44ecd6de591) of CPython, 3 tests of test_builtin fails:

======================================================================
ERROR: test_envar_unimportable (test.test_builtin.TestBreakpoint) (envar='.')
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/yen/Projects/cpython/Lib/test/test_builtin.py", line 1618, in test_envar_unimportable
    breakpoint()
ValueError: Empty module name

======================================================================
ERROR: test_envar_unimportable (test.test_builtin.TestBreakpoint) (envar='.foo')
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/yen/Projects/cpython/Lib/test/test_builtin.py", line 1618, in test_envar_unimportable
    breakpoint()
ValueError: Empty module name

======================================================================
ERROR: test_envar_unimportable (test.test_builtin.TestBreakpoint) (envar='.int')
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/yen/Projects/cpython/Lib/test/test_builtin.py", line 1618, in test_envar_unimportable
    breakpoint()
ValueError: Empty module name

----------------------------------------------------------------------

If I revert 6fe9c446f8302553952f63fc6d96be4dfa48ceba, tests pass. This commit is from issue34756, so I add the author of that patch to the nosy list.

Environment: Arch Linux x86_64

Steps to reproduce:
$ ./configure
$ make
$ ./python -m test -v test_builtin
msg333668 - (view) Author: (yan12125) * Date: 2019-01-15 10:29
Wow that's super fast! I can confirm the patch fixes the issue on my machine. Thanks!
msg333669 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-01-15 10:35
I don't understand why buildbots didn't scream and why the test didn't fail on Travis CI nor AppVeyor on https://github.com/python/cpython/pull/9457
msg333670 - (view) Author: (yan12125) * Date: 2019-01-15 10:41
Found a test_builtin failure in the job for the relevant commit on Travis CI - https://travis-ci.org/python/cpython/jobs/479642964#L1491. I guess it's not noticed as it's listed in allow_failures in .travis.yml. However, I'm not sure if it's the same issue or not as there are no failure details.
msg333671 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-01-15 10:46
> Found a test_builtin failure in the job for the relevant commit on Travis CI - https://travis-ci.org/python/cpython/jobs/479642964#L1491.

This job is for code coverage. I confirm that failures are allowed. This job runs the full test suite in sequence, whereas the main Travis CI job runs tests in parallel... I tested running tests in sequence and in parallel: test_builtin fail in both cases. It's a mystery. Anyway, it's going to be fixed soon ;-)
msg333677 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2019-01-15 11:26
New changeset 3607ef43c4a1a24d44f39ff54a77fc0af5bfa09a by Serhiy Storchaka in branch 'master':
bpo-35742: Fix test_envar_unimportable in test_builtin. (GH-11561)
https://github.com/python/cpython/commit/3607ef43c4a1a24d44f39ff54a77fc0af5bfa09a
msg333682 - (view) Author: miss-islington (miss-islington) Date: 2019-01-15 11:46
New changeset 97d6a56d9d169f35cf2a24d62bf15adfc42fc672 by Miss Islington (bot) in branch '3.7':
bpo-35742: Fix test_envar_unimportable in test_builtin. (GH-11561)
https://github.com/python/cpython/commit/97d6a56d9d169f35cf2a24d62bf15adfc42fc672
msg333684 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2019-01-15 11:50
I was surprised too. Maybe it is because that was very old PR.
msg333685 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-01-15 11:51
> I was surprised too. Maybe it is because that was very old PR.

Yeah, that's the most likely explanation. Maybe the CI ran tests before the final merge, or something like that? It doesn't explain why buildbots didn't complain, but it doesn't matter if such hiccup is very rare ;-)
msg333686 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2019-01-15 12:02
Maybe CI updates only files touched by the PR and the failed test was added after the initial creation of the PR? Or there is something wrong with timestamps, so outdated pyc files were used for tests?
History
Date User Action Args
2022-04-11 14:59:10adminsetgithub: 79923
2019-01-15 12:02:39serhiy.storchakasetkeywords: patch, patch, patch, patch

messages: + msg333686
2019-01-15 11:51:34vstinnersetkeywords: patch, patch, patch, patch

messages: + msg333685
2019-01-15 11:50:12serhiy.storchakasetstatus: open -> closed
messages: + msg333684

keywords: patch, patch, patch, patch
resolution: fixed
stage: patch review -> resolved
2019-01-15 11:46:01miss-islingtonsetnosy: + miss-islington
messages: + msg333682
2019-01-15 11:27:10miss-islingtonsetpull_requests: + pull_request11216
2019-01-15 11:27:09miss-islingtonsetpull_requests: + pull_request11215
2019-01-15 11:27:07miss-islingtonsetpull_requests: + pull_request11214
2019-01-15 11:27:05miss-islingtonsetpull_requests: + pull_request11213
2019-01-15 11:26:50serhiy.storchakasetmessages: + msg333677
2019-01-15 10:46:08vstinnersetkeywords: patch, patch, patch, patch

messages: + msg333671
2019-01-15 10:41:13yan12125setmessages: + msg333670
2019-01-15 10:35:09vstinnersetkeywords: patch, patch, patch, patch
nosy: + vstinner
messages: + msg333669

2019-01-15 10:29:41yan12125setmessages: + msg333668
2019-01-15 10:23:29serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request11205
2019-01-15 10:23:24serhiy.storchakasetkeywords: + patch
stage: (no value)
pull_requests: + pull_request11204
2019-01-15 10:23:18serhiy.storchakasetkeywords: + patch
stage: (no value)
pull_requests: + pull_request11203
2019-01-15 10:23:12serhiy.storchakasetkeywords: + patch
stage: (no value)
pull_requests: + pull_request11202
2019-01-15 09:43:57yan12125create